<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TableRow
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <Button
            android:text="@string/example_001"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="goToExample001"
            />

        <Button
            android:text="@string/example_002"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="goToExample002"
            />

        <Button
            android:text="@string/example_003"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="goToExample003"
            />

    </TableRow>
    <TableRow
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <Button
            android:text="@string/example_004"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="goToExample004"
            />

        <Button
            android:text="@string/example_005"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="goToExample005"
            />

        <Button
            android:text="@string/example_006"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="goToExample006"
            />

    </TableRow>
    <TableRow
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <Button
            android:text="@string/example_007"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="goToExample007"
            />

        <Button
            android:text="@string/example_008"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="goToExample008"
            />

        <Button
            android:text="@string/example_009"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="goToExample009"
            />
    </TableRow>
    <TableRow
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <Button
            android:text="@string/example_010"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="goToExample010"
            />

        <Button
            android:text="@string/example_011"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="goToExample011"
            />

        <Button
            android:text="@string/example_012"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="goToExample012"
            />
    </TableRow>
    <TableRow
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <Button
            android:text="@string/example_013"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="goToExample013"
            />

        <Button
            android:text="@string/example_014"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="goToExample014"
            />

        <Button
            android:text="@string/example_015"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="goToExample015"
            />
    </TableRow>
    <TableRow
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <Button
            android:text="@string/example_016"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="goToExample016"
            />

        <Button
            android:text="@string/example_017"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="goToExample017"
            />

        <Button
            android:text="@string/example_018"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="goToExample018"
            />
    </TableRow>
    <TableRow
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <Button
            android:text="@string/example_019"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="goToExample019"
            />

        <Button
            android:text="@string/example_020"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="goToExample020"
            />

        <Button
            android:text="@string/example_021"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="goToExample021"
            />
    </TableRow>

    <TableRow
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <Button
            android:text="@string/example_022"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="goToExample022"
            />

        <Button
            android:text="@string/example_023"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="goToExample023"
            />

        <Button
            android:text="@string/example_024"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="goToExample024"
            />
    </TableRow>

    <TableRow
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <Button
            android:text="@string/example_025"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="goToExample025"
            />

        <Button
            android:text="@string/example_026"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="goToExample026"
            />

        <Button
            android:text="@string/example_027"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="goToExample027"
            />
    </TableRow>

    <TableRow
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <Button
            android:text="@string/example_028"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="goToExample028"
            />

        <Button
            android:text="@string/example_029"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="goToExample029"
            />

        <Button
            android:text="@string/example_030"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="goToExample030"
            />
    </TableRow>

    <TableRow
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <Button
            android:text="@string/example_031"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="goToExample031"
            />
        <Button
            android:text="@string/example_032"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="goToExample032"
            />
        <Button
            android:text="@string/example_033"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="goToExample033"
            />

    </TableRow>

    <TableRow
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <Button
            android:text="@string/example_034"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="goToExample034"
            />
        <Button
            android:text="@string/example_041"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="goToExample041"
            />
    </TableRow>

</TableLayout>