<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_one"
        android:layout_centerInParent="true"
        />

    <Button
        android:id="@+id/button_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_two"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_three"
        android:layout_alignBaseline="@id/button_two"
        android:layout_toLeftOf="@id/button_two"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_four"
        android:layout_alignBaseline="@id/button_two"
        android:layout_toRightOf="@id/button_two"
        />

</RelativeLayout>